@@ -1,0 +1,4 @@
+# ffmpeg is being built with -fPIC yet the result binaries still get these
+# TEXTRELs. This requires further investigation.
+libavcodec52: shlib-with-non-pic-code usr/lib/i686/cmov/libavcodec.so.52.20.0
+libavcodec52: shlib-with-non-pic-code usr/lib/libavcodec.so.52.20.0
